Driver switch; saving first few rows, initial columns, circles

--- a/design-project.html
+++ b/design-project.html
@@ -29,6 +29,28 @@
 
         </div>
 
+        <!-- Begin second row; contains VISUAL DESIGN & WEB DEVELOPMENT + LOCATION -->
+
+        <div class="row">
+            <div class="col-12 text-center">
+                <h3 class="font-weight-bold">VISUAL DESIGN & WEB DEVELOPMENT</h3>
+            </div>
+            <br>
+            <br>
+            <br>
+            <div class="col-12 text-center">
+                <h4>FROM PARK CITY, UTAH</h4>
+            </div>
+            <br>
+            <br>
+            <br>
+            <!-- This begins the four circles -->
+
+            <div id="design-circle" class="rounded-circle justify-content-center">
+                <h5>Design</h5>
+            </div>
+        </div>
+
 
 
 
