--- a/design-project.html
+++ b/design-project.html
@@ -21,7 +21,7 @@
                 <img id="logo" src="./assets/logo.jpg" alt="logo">
             </div>
             <div class="col-12">
-                <p class="text-center">codeup design</p>
+                <p id="header" class="text-center">codeup design</p>
             </div>
 
 <!--            MOBILE NAV BAR GOES HERE-->
@@ -33,12 +33,15 @@
 
         <div class="row">
             <div class="col-12 text-center">
-                <h3 class="font-weight-bold">VISUAL DESIGN & WEB DEVELOPMENT</h3>
+                <h2 class="anton">VISUAL DESIGN & </h2>
+            </div>
+            <div class="col-12 text-center">
+                <h2 class="anton">WEB DEVELOPMENT</h2>
             </div>
             <br>
             <br>
             <br>
-            <div class="col-12 text-center">
+            <div class="col-12 text-center anton">
                 <h4>FROM PARK CITY, UTAH</h4>
             </div>
             <br>
@@ -46,12 +49,41 @@
             <br>
             <!-- This begins the four circles -->
 
-            <div id="design-circle" class="rounded-circle justify-content-center">
-                <h5>Design</h5>
+            <div class="col-6 d-flex justify-content-center align-items-center">
+                <h5 id="design" class="rounded-circle ml-auto anton d-flex justify-content-center align-items-center circleRed">DESIGN</h5>
+            </div>
+            <div  class="col-6">
+                <h5 id="develop" class="rounded-circle anton d-flex justify-content-center align-items-center circleOrange">DEVELOP</h5>
+            </div>
+            <div  class="col-6">
+                <h5 id="support" class="rounded-circle ml-auto anton d-flex justify-content-center align-items-center circleGreen">SUPPORT</h5>
+            </div>
+            <div  class="col-6">
+                <h5 id="host" class="rounded-circle mr-auto anton d-flex justify-content-center align-items-center circleBlue">HOST</h5>
             </div>
         </div>
 
+<!--        STARTS SELECTED WORK AND IMAGES ROW-->
+        <div class="row numberThree">
+            <div class="col-12">
+                <p class="text-center">SELECTED WORK</p>
+            </div>
+            <div class="col-12 text-center">
+                <img src="./assets/images/apple-ipad.jpg" alt="apple" id="appleIpad">
+            </div>
+            <div class="col-6">
+                <p>FEATURED PROJECT</p>
+            </div>
+            <div class="col-6 d-flex justify-content-end">
+                <span id="smallCircles" class="d-flex justify-content-between">
+                    <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleRed">D</h6>
+                    <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleOrange">D</h6>
+                    <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleGreen">S</h6>
+                    <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleBlue">H</h6>
+                </span>
+            </div>
 
+        </div>
 
 
 
