--- a/design-project.html
+++ b/design-project.html
@@ -16,37 +16,41 @@
 
 <!--THIS IS THE MAIN CONTENT CONTAINER-->
     <div class="container">
-        <div class="row">
+        <div class="row rowOne">
+            <div class="col-12 bg-white whiteBar"></div>
             <div class="col-12 text-center">
                 <img id="logo" src="./assets/logo.jpg" alt="logo">
             </div>
             <div class="col-12">
                 <p id="header" class="text-center">codeup design</p>
             </div>
-
 <!--            MOBILE NAV BAR GOES HERE-->
+            <div class="navBar col-12 text-center">
+                <ul class="navFlex d-flex justify-content-around">
+                    <li><a href="">SERVICES</a></li>
+                    <li><a href="">WORK</a></li>
+                    <li><a href="">BLOG</a></li>
+                    <li><a href="">CONTACT</a></li>
+                </ul>
+
+            </div>
 
 
         </div>
 
         <!-- Begin second row; contains VISUAL DESIGN & WEB DEVELOPMENT + LOCATION -->
 
-        <div class="row">
+        <div class="row rowTwo">
             <div class="col-12 text-center">
                 <h2 class="anton">VISUAL DESIGN & </h2>
             </div>
             <div class="col-12 text-center">
                 <h2 class="anton">WEB DEVELOPMENT</h2>
             </div>
-            <br>
-            <br>
-            <br>
             <div class="col-12 text-center anton">
-                <h4>FROM PARK CITY, UTAH</h4>
+                <h4 class="fromUtah">FROM PARK CITY, UTAH</h4>
             </div>
-            <br>
-            <br>
-            <br>
+
             <!-- This begins the four circles -->
 
             <div class="col-6 d-flex justify-content-center align-items-center">
@@ -64,15 +68,16 @@
         </div>
 
 <!--        STARTS SELECTED WORK AND IMAGES ROW-->
-        <div class="row numberThree">
+
+        <div class="row rowThree">
             <div class="col-12">
-                <p class="text-center">SELECTED WORK</p>
+                <p class="text-center imageText">SELECTED WORK</p>
             </div>
             <div class="col-12 text-center">
                 <img src="./assets/images/apple-ipad.jpg" alt="apple" id="appleIpad">
             </div>
             <div class="col-6">
-                <p>FEATURED PROJECT</p>
+                <p class="imageText">FEATURED PROJECT</p>
             </div>
             <div class="col-6 d-flex justify-content-end">
                 <span id="smallCircles" class="d-flex justify-content-between">
