--- a/design-project.html
+++ b/design-project.html
@@ -104,54 +104,73 @@
             <div class="col-12">
                 <p class="text-center imageText">SELECTED WORK</p>
             </div>
-
-<!--            APPLE IPAD XS-->
-
-           <div class="col-12 col-sm-6 d-block d-sm-none text-center">
+            <!--            APPLE IPAD XS-->
+            <div class="col-12 col-sm-6 text-center d-block d-sm-none">
                 <img src="./assets/images/apple-ipad.jpg" alt="apple" id="appleIpadXS">
             </div>
-            <div class="col-6 d-block d-sm-none">
-                <p class="imageText">FEATURED PROJECT</p>
+            <div class="col-6 d-block d-sm-none" id="featuredXS">
+                <p id="imageTextXS">FEATURED PROJECT</p>
             </div>
-            <div class="col-6 d-flex justify-content-end">
-                <span class="smallCircles d-block d-sm-none d-flex justify-content-between">
-                    <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleRed">D</h6>
-                    <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleOrange">D</h6>
-                    <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleGreen">S</h6>
-                    <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleBlue">H</h6>
-                </span>
+            <div class="d-block d-sm-none" id="smallCircleXSDiv">
+                <div class="col-6 d-flex justify-content-end">
+                   <span class="d-flex justify-content-end" id="smallCirclesXS">
+                       <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleRed smallCircleXSPad">D</h6>
+                       <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleOrange smallCircleXSPad">D</h6>
+                       <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleGreen smallCircleXSPad">S</h6>
+                       <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleBlue smallCircleXSPad">H</h6>
+                   </span>
+                </div>
             </div>
 
 
+            <!--            IMAGE GROUP BOX 1 APPLE IPAD/MACBOOK SM-->
 
-<!--            IMAGE GROUP BOX 1 APPLE IPAD SM-->
             <div class="col-sm-6 text-center d-none d-sm-block d-md-none">
-                <img src="./assets/images/apple-ipad.jpg" alt="apple" id="appleIpadSM">
+                <img src="./assets/images/apple-ipad.jpg" alt="apple" class="appleIpadSM">
             </div>
-            <div class="col-6 d-none d-sm-block d-md-none">
+            <div class="col-sm-6 text-center d-none d-sm-block d-md-none">
+                <img src="./assets/images/macbook.jpg" alt="apple" class="macbookSM">
+            </div>
+
+<!--            IMAGES GROUP FEATURES BOX 1-->
+
+            <div class="col-3 d-none d-sm-block d-md-none">
+                <p class="imageTextSM">FEATURED PROJECT</p>
+            </div>
+            <div class="col-3 d-none d-sm-block d-md-none">
+                <div class=" d-flex justify-content-end" id="smallCircleSmallDiv1">
+                   <span class="d-none d-sm-block d-md-none">
+                       <span class="d-flex justify-content-between" id="smallCirclesSmall1">
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleRed smallCircleSmallPad">D</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleOrange smallCircleSmallPad">D</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleGreen smallCircleSmallPad">S</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleBlue smallCircleSmallPad">H</h6>
+                       </span>
+                   </span>
+                </div>
+            </div>
+
+<!--            IMAGES GROUP FEATURES BOX 2-->
+
+            <div class="col-3 d-none d-sm-block d-md-none">
                 <p class="imageText">FEATURED PROJECT</p>
             </div>
-            <div class="col-6 d-flex justify-content-end">
-                <span class="d-none d-sm-block d-md-none">
-                    <span class="smallCircles d-flex justify-content-between ">
-                        <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleRed">D</h6>
-                        <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleOrange">D</h6>
-                        <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleGreen">S</h6>
-                        <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleBlue">H</h6>
-                    </span>
-                </span>
+            <div class="col-3 d-none d-sm-block d-md-none">
+                <div class="d-flex justify-content-end" id="smallCircleSmallDiv2">
+                   <span class="d-none d-sm-block d-md-none">
+                       <span class="d-flex justify-content-end"  id="smallCirclesSmall2">
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleRed smallCircleSmallPad">D</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleOrange smallCircleSmallPad">D</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleGreen smallCircleSmallPad">S</h6>
+                           <h6 class="rounded-circle anton d-flex justify-content-center align-items-center circleBlue smallCircleSmallPad">H</h6>
+                       </span>
+                   </span>
+                </div>
             </div>
+
 
         </div>
-
-
-
     </div>
-
-
-
-
-
 
 
 
